--- a/utilslibrary/src/main/AndroidManifest.xml
+++ b/utilslibrary/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.oy.chardemo.utilslibrary">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true">
-
-    </application>
+        android:supportsRtl="true"></application>
 
 </manifest>
